	* Added: Todoyu.String.getCounter() to extract a counter value from a string
	* Added: Todoyu.Tabs.updateTabCounter() and .getTabCounter()
	* Added: Dwoo plugin escapeQuotesForHtmlAttributes which replaces quotes by ASCII codes
	* Added: TodoyuArray::assureFromSerialized()
	* Added: TodoyuDebug::getBacktrace()
	* Added: Todoyu.ListScrollLoader()
	* Added: class TodoyuTimezoneManager
	* Changed: extracted select-group-options from template
	* Changed: Renamed TodoyuArray::prefix() to prefixValues()
	* Changed: Removed $parseConstants from TodoyuArray::intExplode(). Was not used and supported. Added $limi parameter as for trimExplode()
	* Changed: Use js version instead of php the check for the first input in form
	* Changed: Update form XSD validation to match know field types only
	* Changed: Created instances for parsing form xml files to prevent overlapping when multiple forms are parsed parallel
	* Changed: Group label of selectgrouped is now parsed as label
	* Changed: Removed unused parameter $preParseValues from form instantiation
	* Changed: Added $formData as default $params value in form instantiation
	* Changed: Parse label for grouped select options
	* Changed: Cleanup radio form element. Removed sql as source type. Support default value
	* Changed: Clone field objects when added to a fieldset. Allows to add a field multiple times under different names
	* Changed: Clone fieldsets when added to a form or another fieldset
	* Changed: Send 404 http status if controller is not found
	* Changed: TodoyuArray::explode() return the $string if it is already an array
	* Changed: Added limit parameter for TodoyuDebug::printBacktrace()
	* Changed: enlarged content width
	* Changed: context menu refactoring
	* Changed: Open duration picker closes on body click
	* Library: Upgraded from PHPMailer-lite 5.1 to PHPMailer 5.2.1
	* Library: Highcharts 2.2.3
	* Library: tinyMCE 3.5.4.1

core 2.2.0 - 2012-05-03